# rust-common

./: .gitignore  CHANGELOG.md  Cargo.toml  FEATURES.md  LICENSE  MODULE_STRUCTURE.md  README.md
.cursor/rules/: rust-rules.mdc
examples/: feature_demo.rs  kafka_consumer.rs  kafka_producer.rs  logger_demo.rs  request_sender.rs  stream_handler.rs
src/: lib.rs
src/kafka/: config.rs  error.rs  extensions.rs  mod.rs  request_sender.rs  routes_register.rs  stream_hander.rs  stream_handler.rs  utils.rs
src/kafka/core/: error.rs  extensions.rs  kafka_config.rs  kafka_consumer.rs  kafka_producer.rs  mod.rs
src/logger/: config.rs  error.rs  init.rs  mod.rs
src/math/: advanced.rs  arithmetic.rs  constants.rs  mod.rs  number_utils.rs  statistics.rs  trigonometry.rs
