[package]
name = "rust-common"
version = "0.1.0"
edition = "2021"
authors = ["ThuyKaka <thuykaka.uit@gmail.com>"]
description = "A common utility library for Rust projects"
license = "MIT"
repository = "https://github.com/thuykaka/rust-common"
keywords = ["common", "utilities", "logging", "helpers"]
categories = ["utilities"]
readme = "README.md"

[dependencies]
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "chrono"] }
tracing-appender = "0.2"
tokio = { version = "1.47.1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0.99"
thiserror = "2.0.14"
tracing-error = "0.2.1"

[dev-dependencies]

[features]
default = []
